src/objects/AccountAddressAssociation__c.object
<CustomObject>
    <description>SFDC1-206 This is a junction object to create Many-to-Many relationship between Account and Account Address object</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>SFDC1-206 Primary master-detail relationship with account object.</description>
        <inlineHelpText>Select the account associated to address</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>AddressDetail__c</fullName>
        <description>SFDC1-206 Formula field to important address information from Account Address object.</description>
        <formula>Address__r.Street1__c &amp; Address__r.Street2__c &amp; &quot;, &quot; &amp;  Address__r.DeptMailStop__c  &amp; &quot;, &quot; &amp; Address__r.City__c &amp; &quot;, &quot; &amp; Address__r.StateProvince__c &amp; &quot;, &quot; &amp; Address__r.AddressCountry__r.Name  &amp; &quot;, &quot; &amp; Address__r.ZipPostalCode__c</formula>
        <inlineHelpText>Displays address details for the Account Address record</inlineHelpText>
        <label>Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>SFDC1-206 Secondary master-detail relationship with account address object</description>
        <inlineHelpText>Select the Address associated with account</inlineHelpText>
        <label>Address Company Name</label>
        <referenceTo>AccountAddress__c</referenceTo>
        <relationshipLabel>Related Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-206 Specify whether the association is for Bill to address or not.</description>
        <inlineHelpText>Check if it is a Bill to address</inlineHelpText>
        <label>Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKIDAcctAddy__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>AAd{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID AcctAddy</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-206 To specify whether the address is a Ship to Address.</description>
        <inlineHelpText>Check if this is a Ship to address</inlineHelpText>
        <label>Ship To</label>
        <type>Checkbox</type>
    </fields>
    <label>Related Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Related Address#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>